--- a/app/src/main/res/layout/activity_kubus.xml
+++ b/app/src/main/res/layout/activity_kubus.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="#E9EAF3"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <TextView
         android:layout_width="match_parent"
@@ -34,12 +34,12 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textColor="#fff"
-        android:background="#3F51B5"
         android:layout_marginTop="250dp"
+        android:background="#3F51B5"
+        android:drawableStart="@drawable/hitung"
         android:text="@string/Selimut"
-        android:drawableStart="@drawable/hitung"/>
+        android:textColor="#fff"
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/button3"
