--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#181A29"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
         <TextView
             android:layout_width="match_parent"
@@ -34,8 +34,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="@string/dibuat_oleh_aldi"
             android:textAlignment="center"
+            android:text="Rizky Adi Ryanto"
             android:textAllCaps="true"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="15sp"
@@ -54,9 +54,9 @@
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="4dp"
-            android:src="@drawable/kubus"
+            android:contentDescription="@string/todo"
             android:scaleType="fitCenter"
-            android:contentDescription="@string/todo" />
+            android:src="@drawable/kubus" />
 
         <ImageButton
             android:id="@+id/kerucut"
@@ -64,9 +64,9 @@
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="4dp"
-            android:src="@drawable/kerucut"
+            android:contentDescription="@string/todo"
             android:scaleType="fitCenter"
-            android:contentDescription="@string/todo" />
+            android:src="@drawable/kerucut" />
 
         <ImageButton
             android:id="@+id/balok"
@@ -74,9 +74,9 @@
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="4dp"
-            android:src="@drawable/balok"
+            android:contentDescription="@string/todo"
             android:scaleType="fitCenter"
-            android:contentDescription="@string/todo" />
+            android:src="@drawable/balok" />
 
         <View
             android:layout_width="match_parent"
@@ -84,12 +84,12 @@
             android:layout_marginTop="8dp"
             android:background="@color/colorPrimary" />
 
-    <TextView
+        <TextView
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="@string/manajemen_informatika_d3"
+            android:text="Informatika_UTS_Sumbawa"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="@color/colorPrimaryDark"
